crates/k-rust/src/kore/parser/snapshots/k_rust__kore__parser__sentence__tests__sort_declarations.snap
---
source: crates/k-rust/src/kore/parser/sentence.rs
description: "KORE sentence:\n\nhooked-sort SortMap{K, V} [hook{}(\"MAP.Map\")]\n"
---
SortDeclaration {
    hooked: true,
    name: "SortMap",
    parameters: [
        "K",
        "V",
    ],
    attributes: Attributes(
        [
            Application {
                symbol: Symbol {
                    name: "hook",
                    sort_parameters: [],
                },
                arguments: [
                    String(
                        "MAP.Map",
                    ),
                ],
            },
        ],
    ),
}
